Wed Feb 14 10:20:14 GMT 2007  Olly Betts <olly@survex.com>

	* preautoreconf: Handle variables set with "+=" and ":=".

Wed Feb 14 10:16:29 GMT 2007  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Add documentation comments for DB_*
	  constants.

Wed Feb 14 10:11:37 GMT 2007  Olly Betts <olly@survex.com>

	* examples/.cvsignore: Remove lingering relic of CVS days.

Wed Feb 14 10:07:14 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,net/Makefile,net/Makefile.am,
	  net/Makefile.mk: Convert net subdirectory to use non-recursive make.
	  Now libxapian.la is built completely non-recursively.
	* docs/Makefile.am,docs/mkdoc.pl: Fix mkdoc.pl to handle directories
	  which use non-recursive make.

Wed Feb 14 09:10:27 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,backends/Makefile,backends/Makefile.am,
	  backends/Makefile.mk,backends/flint/Makefile,
	  backends/flint/Makefile.am,backends/flint/Makefile.mk,
	  backends/inmemory/Makefile,backends/inmemory/Makefile.am,
	  backends/inmemory/Makefile.mk,backends/multi/Makefile,
	  backends/multi/Makefile.am,backends/multi/Makefile.mk,
	  backends/quartz/Makefile,backends/quartz/Makefile.am,
	  backends/quartz/Makefile.mk,backends/remote/Makefile,
	  backends/remote/Makefile.am,backends/remote/Makefile.mk,
	  configure.ac: Convert backends subdirectory (and subdirectories
	  thereof) to non-recursive make.

Wed Feb 14 08:49:02 GMT 2007  Olly Betts <olly@survex.com>

	* preautoreconf: Fix handling of backslash at the end of a line in
	  included files.
	* preautoreconf: Our handling of which directory a nested include is
	  sought from is consistent with automake, so remove the FIXME comment
	  about it.

Wed Feb 14 08:07:07 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,matcher/Makefile,matcher/Makefile.am,
	  matcher/Makefile.mk: Convert matcher subdirectory to non-recursive
	  make.

Wed Feb 14 07:50:19 GMT 2007  Olly Betts <olly@survex.com>
