@@ -2,6 +2,8 @@
 
 INCLUDES = -I$(top_srcdir)/common
 
+EXTRA_DIST = dir_contents
+
 noinst_LTLIBRARIES = libgetopt.la
 
 libgetopt_la_SOURCES = getopt.cc
