@@ -1,3 +1,9 @@
+Wed Feb 14 10:38:27 GMT 2007  Olly Betts <olly@survex.com>
+
+	* backends/quartz/Makefile.mk,bin/Makefile.am,tests/Makefile.am: Move
+	  backends/quartz/libbtreecheck.la to libquartzcheck.la.
+	* getopt/Makefile.am: Distribute getopt/dir_contents.
+
 Wed Feb 14 10:20:14 GMT 2007  Olly Betts <olly@survex.com>
 
 	* preautoreconf: Handle variables set with "+=" and ":=".
